# rs-eigentrust

./: .gitignore  Cargo.toml  README.md  init.sh  run_simulation.sh  rust-toolchain.toml  rustfmt.toml
.github/workflows/: clippy.yml  diff.yml  formatting.yml  test.yml
attestation-transformer/: Cargo.toml  build.rs
attestation-transformer/proto/: transformer.proto
attestation-transformer/src/: client.rs  did.rs  error.rs  main.rs  proto.rs  schemas.rs  server.rs  storage.rs  term.rs  utils.rs
attestation-transformer/src/managers/: checkpoint.rs  mod.rs  term.rs
attestation-transformer/src/schemas/: approve.rs  disapprove.rs  follow.rs  mod.rs  security.rs  status.rs  trust.rs
compute/: Cargo.toml  build.rs
compute/api/pb/: compute.proto
compute/src/: lib.rs
core-compute/: Cargo.toml
core-computer/: Cargo.toml
indexer/: .env.example  .gitignore  Cargo.toml  README.md  test.json
indexer/assets/clique/: clique_master_registry_abi.json
indexer/assets/csv/: mock.csv
indexer/scripts/generate_mock_attestations/: .gitignore  README.md  auditReportSchema.js  cli.sh  constants.js  endorsementSchema.js  endorsmentSchema.js  index.js  package-lock.json  package.json  utils.js
indexer/scripts/generate_mock_attestations/src/: auditReportSchema.js  cli.js  constants.js  csv.js  endorsementSchema.js  generate.js  index.js
indexer/src/: cli.rs  main.rs
indexer/src/clients/: mod.rs  types.rs
indexer/src/clients/clique/: README.md  client.rs  indexer.rs  mod.rs  types.rs
indexer/src/clients/csv/: client.rs  types.rs
indexer/src/clients/metamask_connector/: client.rs  types.rs
indexer/src/config/: dotenv.rs  mod.rs
indexer/src/frontends/: mod.rs
indexer/src/frontends/api/: mod.rs
indexer/src/frontends/api/grpc_server/: client.rs  grpc_server.rs  mod.rs  types.rs
indexer/src/frontends/api/rest/: server.rs
indexer/src/frontends/grpc_server/: grpc_server.rs  types.rs
indexer/src/logger/: factory.rs  global.rs  mod.rs
indexer/src/storage/: mod.rs  types.rs
indexer/src/storage/level_db/: level_db.rs  mod.rs
indexer/src/storage/lm_db/: lm_db.rs  mod.rs  types.rs
indexer/src/storage/mock_db/: mock_db.rs  mod.rs
indexer/src/tasks/: cache.rs  indexer.rs  mod.rs  service.rs  task.rs  types.rs
indexer/src/tasks/clique/: task.rs
indexer/src/tasks/csv_poc/: task.rs
indexer/src/tasks/metamask_connector/: task.rs
job-manager/: Cargo.toml
job-manager/src/: main.rs
linear-combination/: Cargo.toml
linear-combinator/: Cargo.toml
linear-combinator/src/: main.rs
linear-combiner/: Cargo.toml
linear-combiner/src/: combiner.rs  did.rs  error.rs  item.rs  main.rs
linear-combiner/src/managers/: checkpoint.rs  index.rs  item.rs  mapping.rs  mod.rs  update.rs
mm-spd-did/: Cargo.toml
mm-spd-did/src/: lib.rs
mm-spd-vc/: Cargo.toml
mm-spd-vc/src/: lib.rs
proto-buf/: Cargo.toml  build.rs
proto-buf/services/: combiner.proto  common.proto  compute.proto  eigentrust.proto  indexer.proto  transformer.proto  trustvector.proto
proto-buf/src/: lib.rs
snap-score-computer/: Cargo.toml
snap-score-computer/src/: cli.rs  main.rs  vc.rs
spd-tv/: Cargo.toml
spd-tv/src/: main.rs
trustmatrix/: Cargo.toml  build.rs
trustmatrix/api/pb/: trustmatrix.proto
trustmatrix/src/: lib.rs
trustvector/: Cargo.toml  build.rs
trustvector/api/pb/: trustvector.proto
trustvector/src/: lib.rs
