[package]
name = "attestation-transformer"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
futures = "0.3"
rocksdb = "0.21.0"
proto-buf = { path = "../proto-buf" }

[build-dependencies]
tonic-build = "0.7"
