[package]
name = "attestation-transformer"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7"
prost = "0.10"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
futures = "0.3"
rocksdb = "0.21.0"
proto-buf = { path = "../proto-buf" }
secp256k1 = { version = "0.28.0", features = ["recovery", "global-context"] }
sha3 = "0.10.8"
hex = "0.4.3"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"

[build-dependencies]
tonic-build = "0.7"
