[package]
name = "compute"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
num = "0.4"
simple-error = "0.3"
http-body = "0.4"
futures = "0.3"
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
trustvector.workspace = true

[build-dependencies]
prost-build.workspace = true
tonic-build.workspace = true
