[package]
name = "indexer"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = "1.0.192"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
proto-buf.workspace = true
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tonic.workspace = true
serde_json = "1.0"
sha3 = "0.10.8"
digest = "0.10.7"
hex = "0.4.3"
ethereum_abi = "0.4.0"
ethers = "2.0.11"
ethers-providers = { version = "2.0.11", features = ["ws"] }
eyre = "0.6.9"
heed = "0.11.0"
color-eyre = "0.6.2"
csv = "1.3.0"
clap = { version = "4.4", features = ["derive"] }
