[package]
name = "job-manager"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto-buf.workspace = true
tonic.workspace = true
futures = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
clap = { version = "4.4", features = ["derive"] }
hex = "0.4.3"
