[package]
name = "linear-combiner"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto-buf.workspace = true
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tonic.workspace = true
rocksdb = { version = "0.21.0", features = ["multi-threaded-cf"] }
thiserror = "1.0.50"
hex = "0.4.3"
serde = "1.0"
serde_derive = "1.0"
clap = { version = "4.4", features = ["derive"] }
