[package]
name = "snap-score-computer"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
proto-buf.workspace = true
tonic.workspace = true
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
thiserror = "1.0"
json = "0.12"
http = "0.2"
log = { version = "0.4", features = ["kv_unstable", "kv_unstable_std", "std", "serde"] }
structured-logger = "1.0"
simplelog = "0.12"
itertools = "0.12"
binascii = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_jcs = "0.1"
chrono = "0.4"
sha3 = "0.10"
zip = "0.6"
