[package]
name = "snap-score-computer"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
trustmatrix.workspace = true
trustvector.workspace = true
compute.workspace = true
proto-buf.workspace = true
mm-spd-vc.workspace = true
tonic.workspace = true
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
thiserror = "1.0"
simple-error = "0.3"
json = "0.12"
http = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["ansi", "json", "env-filter"] }
itertools = "0.12"
binascii = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_jcs = "0.1"
chrono = "0.4"
sha3 = "0.10"
zip = "0.6"
aws-config = "1.1.4"
aws-sdk-s3 = "1.14.0"
url = "2.5.0"
futures = "0.3.30"
num = "0.4.1"
reqwest = { version = "0.11", features = ["json"] }
