[package]
name = "spd-tv"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["ansi"] }
tonic.workspace = true
trustvector.workspace = true
proto-buf.workspace = true
num = "0.4"
binascii = "0.1"
thiserror = "1.0"
itertools = "0.12"